@@ -25,6 +25,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Extended informations displayed in the @@display-inserting-methods-helper-msg to display every relevant informations
   depending on selected inserting methods including ordered groups and ordered categories
 - Moved utils.getLastEvent to imio.history.utils.getLastWFACtion
+- Added helper MeetingConfig.update_cfgs to be able to easily propagate a parameter defined on a MeetingConfig to
+  several other MeetingConfigs.  This is useful when configuring a lot of MeetingConfigs using same parameters values
 
 4.1b14 (2018-12-18)
 -------------------
